Trying to fix overflow

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,7 +4,7 @@ body, html {
     color: black !important;
     width: 100vw !important;
     height: 100vh !important;
-    overflow-x: hidden;
+    overflow: hidden;
 }
 
 .btn {
